# DistMat

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
DistMat/src/: AST.hpp  Error.h  Error.hpp  Matrix.h  Matrix.hpp  MatrixBase.h  MatrixBase.hpp  MatrixMultiplication.h  MatrixMultiplication.hpp  Multiplication.hpp  Traits.hpp  Type.h  Type.hpp  Util.hpp  Utils.hpp
cmake/: InstallExternalProject.cmake
test/: BasicTest.hpp  Bench.cpp  Bench.hpp  experiment_expr.cpp  testMatrix.cpp  test_matrix.cpp
test/bench/: bench.cpp  bench.h  bench.hpp
